k8s_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-webapp-svc
spec:
  selector:
    app: staticwebapp
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
